Removed useless compile files.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,14 @@ Thesis/Thesis.out
 Thesis/Thesis.run.xml
 Thesis/Thesis.synctex.gz
 Thesis/Thesis.toc
+Presentation/Presentation.aux
+Presentation/Presentation.bbl
+Presentation/Presentation.bcf
+Presentation/Presentation.blg
+Presentation/Presentation.log
+Presentation/Presentation.nav
+Presentation/Presentation.out
+Presentation/Presentation.run.xml
+Presentation/Presentation.snm
+Presentation/Presentation.synctex.gz
+Presentation/Presentation.toc
